--- a/index.html
+++ b/index.html
@@ -11,7 +11,25 @@
 </head>
 <body>
     <!-- header section -->
-    <header>
+    <header class="header">
+        <div class="header-container">
+            <div class="idea">
+                <img src="images/icons/logo.png" alt="">
+                <p>Idea</p>
+
+            </div>
+            <div class="nav">
+                <nav class="nav-description">
+                    <ul class="description">
+                        <li>Home</li>
+                        <li>About</li>
+                        <li>Works</li>
+                        <li><img src="images/icons/profile.png" alt=""></li>
+                    </ul>
+                </nav>
+
+            </div>
+        </div>
 
     </header>
     <!-- main section -->
@@ -22,27 +40,27 @@
             <div class="players">
                 <div class="player">
                     <img src="images/players/player-1.png" alt="">
-                    <h4 class="player-blog-heading">John Smith</h4>
+                    <h4 class="player-blog-heading">Rabiul Islam</h4>
                 </div>
                 <div class="player">
                     <img src="images/players/player-2.png" alt="">
-                    <h4 class="player-blog-heading">Pro Rasel</h4>
+                    <h4 class="player-blog-heading">Pro Munna</h4>
                 </div>
                 <div class="player">
                     <img src="images/players/player-3.png" alt="">
-                    <h4 class="player-blog-heading">Abu Sufian</h4>
+                    <h4 class="player-blog-heading">Al-Amin</h4>
                 </div>
                 <div class="player">
                     <img src="images/players/player-4.png" alt="">
-                    <h4 class="player-blog-heading">Shajedul Karim</h4>
+                    <h4 class="player-blog-heading">Limon</h4>
                 </div>
                 <div class="player">
                     <img src="images/players/player-5.png" alt="">
-                    <h4 class="player-blog-heading">Maruf Ahmrd</h4>
+                    <h4 class="player-blog-heading">Rakib</h4>
                 </div>
                 <div class="player">
                     <img src="images/players/player-6.png" alt="">
-                    <h4 class="player-blog-heading">Mujahid</h4>
+                    <h4 class="player-blog-heading">Mahbub</h4>
                 </div>
             </div>
             <hr>
